# volumeicon

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  README  README.md  configure  configure.ac
data/: Makefile.am  Makefile.in
data/gui/: preferences.ui
src/: Makefile.am  Makefile.in  alsa_backend.c  config.c  config.h  oss_backend.c  volumeicon.c
